<resources>
    <string name="app_name">RT-OCT</string>
    <string name="rt_oct_icon">RT_OCT Icon</string>
    <string name="or">or</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="lets_create_your_account">Let’s \nCreate \nYour \nAccount</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="otp">OTP</string>
    <string name="checkbox_text">I agree to the</string>
    <string name="send_otp">Send OTP</string>
    <string name="terms_and_privacy"><![CDATA[Terms & Privacy]]></string>
    <string name="have_an_account">Have an account?</string>
    <string name="welcome_back_sign_in_to_your_account">Welcome Back, \nSign In \nto Your \nAccount</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="new_password">New Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="lock_icon">Lock Icon</string>
    <string name="forgot_password_text">Forgot \nPassword?</string>
    <string name="search_contacts_text">Search contacts</string>
    <string name="back_arrow_icon">Back Arrow Icon</string>
    <string name="missed">Missed</string>
    <string name="all">All</string>
    <string name="phone_call_icon">phone_call_icon</string>
    <string name="dialpad_icon">dialpad_icon</string>
    <string name="contact_icon">contact_icon</string>
    <string name="recent">Recent</string>
    <string name="contacts">Contacts</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_star">*</string>
    <string name="_hash">#</string>
    <string name="call">Call</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="contact_1">Aman Khan</string>
    <string name="time_1">01:03 pm</string>
    <string name="info_icon">Info Icon</string>
    <string name="call_placeholder">Call Placeholder</string>
    <string name="a">A</string>
    <string name="hello">Hello</string>
    <string name="m">M</string>
    <string name="contact_2">Mihir Ghanvatkar</string>
    <string name="time_2">10:30 am</string>
    <string name="new_contact">New Contact</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="favorite_contacts">Favorite Contacts</string>
    <string name="saved_contacts">Saved Contacts</string>
    <string name="more_options_icon">More Options icon</string>
    <string name="profile_icon_bg">Profile Icon BG</string>
    <string name="k">K</string>
    <string name="kartikey_dhale">Kartikey Dhale</string>
    <string name="_91_7979797979">+91 7979797979</string>
    <string name="phone_call">Phone</string>
    <string name="video_call_icon">Video Call Icon</string>
    <string name="video_call">Video</string>
    <string name="message_icon">Message Icon</string>
    <string name="message">Message</string>
    <string name="favorite_icon">Favorite icon</string>
    <string name="favorite">Favorite</string>
    <string name="block_contact_icon">Block Contact Icon</string>
    <string name="block">Block</string>
    <string name="call_history">Call History</string>
    <string name="backspace">Backspace</string>
</resources>