<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- Background Rectangle -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/rectangle_background" />

    <!-- Title Text -->
    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginStart="30dp"
        android:text="@string/lets_create_your_account"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:lineSpacingExtra="8dp"
        android:textStyle="bold" />

    <!-- Full Name Input -->
    <EditText
        android:id="@+id/full_name"
        android:layout_width="480dp"
        android:layout_height="50dp"
        android:layout_marginTop="275dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_background"
        android:drawableStart="@drawable/user_icon"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:textColorHint="@color/grayHint"
        android:padding="10dp"
        android:drawablePadding="20dp" />

    <!-- Mobile Number Input -->
    <EditText
        android:id="@+id/mobile_number"
        android:layout_width="480dp"
        android:layout_height="50dp"
        android:layout_marginTop="350dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_background"
        android:drawableStart="@drawable/phone_icon"
        android:hint="@string/mobile_number"
        android:inputType="number"
        android:textColorHint="@color/grayHint"
        android:padding="10dp"
        android:drawablePadding="20dp" />

    <!-- Password Input -->
    <EditText
        android:id="@+id/password"
        android:layout_width="480dp"
        android:layout_height="50dp"
        android:layout_marginTop="425dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_background"
        android:drawableStart="@drawable/padlock_icon"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/grayHint"
        android:padding="10dp"
        android:drawablePadding="20dp" />

    <!-- OTP Input -->
    <EditText
        android:id="@+id/otp"
        android:layout_width="480dp"
        android:layout_height="50dp"
        android:layout_marginTop="500dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_background"
        android:drawableStart="@drawable/otp_icon"
        android:hint="@string/otp"
        android:inputType="number"
        android:textColorHint="@color/grayHint"
        android:padding="10dp"
        android:drawablePadding="20dp" />

    <!-- Terms and Privacy -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="555dp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:buttonTint="@color/primaryBlue"
            android:text="@string/checkbox_text"
            android:textColor="@color/primaryBlue"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/terms_and_privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/terms_and_privacy"
            android:textColor="@color/darkBlue"
            android:textStyle="bold"
            android:textSize="16sp" />
    </LinearLayout>

    <!-- Send OTP Button -->
    <Button
        android:id="@+id/sendOtpButton"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="615dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/primaryBlue"
        android:text="@string/send_otp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- Sign Up Button -->
    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="675dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/primaryBlue"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- Sign In Navigation -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="740dp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_an_account"
            android:textColor="@color/primaryBlue"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/sign_in_text"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:text="@string/sign_in"
            android:textColor="@color/darkBlue"
            android:textStyle="bold"
            android:textSize="18sp"
            android:clickable="true"
            android:focusable="true"/>
    </LinearLayout>

</RelativeLayout>
